Simple configuration of using MCPO for add more functionality of LLM agent

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,25 @@
-version: '3.8'
-
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: simple-mcpo-app
+  # OpenWebUI for chat interface
+  openwebui:
+    image: ghcr.io/open-webui/open-webui:main
+    container_name: simplemcpo-openwebui
     ports:
-      - "8000:8000"
-    volumes:
-      - .:/app
+      - "3000:8080"
     environment:
-      - PYTHONUNBUFFERED=1
+      - OPENAI_API_BASE_URL=http://agentic-api:8000
+      - OPENAI_API_KEY=dummy-key # Required but can be dummy for local APIs
+      - WEBUI_AUTH=False # Disable authentication for development
+      - WEBUI_NAME=Agentic Template Chat
+      - WEBUI_URL=http://localhost:3000
+    volumes:
+      - openwebui-data:/app/backend/data
     restart: unless-stopped
+    networks:
+      - agentic-network
+
+networks:
+  agentic-network:
+    driver: bridge
+
+volumes:
+  openwebui-data:
